# automation_project

./: .gitignore  .markdownlint-cli2.yaml  .shellcheckrc  ANALYSE_COHERENCE_WORKFLOWS_SCRIPTS.md  ARCHITECTURE.md  CI_STATUS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.fr.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_STRUCTURE.fr.md  DOCUMENTATION_STRUCTURE.md  LICENSE  README.fr.md  README.md  SECURITY.md  SUMMARY.md  git-github.md  goal_project.md  package.json  pnpm-lock.yaml  sim_report.json  watcher.toml
projects/libraries/ast_core/: Cargo.toml  README.fr.md  README.md
projects/libraries/ast_core/benches/: ast_bench.rs  ast_validation_bench.rs  micro_bench.rs
projects/libraries/ast_core/docs/: ast_macro.md
projects/libraries/ast_core/documentation/: TOC.md  ast_macro.md
projects/libraries/ast_core/documentation/en/: TOC.md
projects/libraries/ast_core/documentation/fr/: TOC.md  ast_macro.md
projects/libraries/ast_core/src/: ast_error_kind.rs  ast_key.rs  ast_kind.rs  ast_macro.rs  ast_meta.rs  ast_node.rs  ast_path.rs  ast_span.rs  ast_validation_error.rs  ext_id.rs  lib.rs  number.rs  opaque_value.rs  origin.rs  path_item.rs  span.rs  validate_limits.rs  walk_validate.rs
projects/libraries/ast_core/src/macros/: build_array.rs  build_object.rs  key.rs  mod.rs  validate.rs  value.rs
projects/libraries/ast_core/src/tests/: ast_builder_tests.rs  ast_macro_tests.rs  ast_node_tests.rs  mod.rs  test_helpers.rs  validate_limits_tests.rs
projects/libraries/ast_core/tests/: helpers.rs  mod.rs
projects/libraries/ast_core/tests/integration/: depth_and_size.rs  duplicate_keys.rs  edge_cases.rs  macro_tests.rs  mod.rs  number_validation.rs
projects/libraries/hybrid_arena/: Cargo.toml  README.fr.md  README.md
projects/libraries/hybrid_arena/benches/: arena_bench.rs
projects/libraries/hybrid_arena/docs/: bump_arena.md  hybrid_arena.md  slot_arena.md  toc.md
projects/libraries/hybrid_arena/documentation/: TOC.md  bump_arena.md  hybrid_arena.md
projects/libraries/hybrid_arena/documentation/en/: TOC.md
projects/libraries/hybrid_arena/documentation/fr/: TOC.md  bump_arena.md  hybrid_arena.md  slot_arena.md
projects/libraries/hybrid_arena/src/: arena_common_trait.rs  bump_arena.rs  bump_arena_drain.rs  bump_arena_into_iter.rs  bump_arena_iter.rs  bump_arena_iter_mut.rs  common_methods.rs  error.rs  id.rs  lib.rs  slot.rs  slot_arena.rs  slot_arena_drain.rs  slot_arena_iter.rs  slot_arena_iter_mut.rs
projects/libraries/hybrid_arena/src/tests/: bump_arena_test.rs  helpers.rs  id_test.rs  mod.rs  slot_arena_test.rs
projects/libraries/identity/: Cargo.toml  README.md
projects/libraries/identity/src/: identity_error.rs  lib.rs  user.rs  user_id.rs  user_store.rs
projects/libraries/identity/src/tests/: helpers.rs  mod.rs  user_id.rs  user_store.rs
projects/libraries/identity/tests/: user_store.rs
projects/libraries/identity/tests/helpers/: fixtures.rs  mod.rs
projects/libraries/layers/domain/security/: Cargo.toml  README.md
projects/libraries/layers/orchestration/ai/: Cargo.toml  README.md
projects/libraries/neural/: Cargo.toml  README.fr.md  README.md
projects/libraries/neural/documentation/en/: TOC.md
projects/libraries/neural/src/: lib.rs  solver.rs
projects/libraries/neural/src/feedback/: adjust_model.rs  adjustment_metrics.rs  feedback_adjuster.rs  feedback_config.rs  feedback_error.rs  feedback_metadata.rs  (+4 more)
projects/libraries/neural/tests/: integration_code_generator.rs  integration_sampling.rs  integration_softmax.rs  integration_training.rs
projects/libraries/security/: Cargo.toml  README.fr.md  README.md
projects/libraries/security/documentation/: TOC.md
projects/libraries/security/src/: auth.rs  auth_error.rs  claims.rs  lib.rs  password.rs  password_error.rs  permission_error.rs  permissions.rs  role.rs  token.rs  token_error.rs  token_service.rs
projects/libraries/symbolic/: Cargo.toml  README.fr.md  README.md
projects/libraries/symbolic/benches/: symbolic_bench.rs
projects/libraries/symbolic/documentation/: TOC.md
projects/libraries/symbolic/src/: feedback_symbolic.rs  lib.rs  solver.rs  solver_result.rs  symbolic_error.rs  symbolic_solver.rs  validation_result.rs
projects/products/accounts/backend/: Cargo.toml
projects/products/code_agent_sandbox/: Cargo.toml  README.md
projects/products/code_agent_sandbox/docs/: BUNKER_EXECUTION.md  PROJECT_OVERVIEW.md
projects/products/code_agent_sandbox/documentation/: PROJECT_OVERVIEW.md
projects/products/code_agent_sandbox/src/: access_kind.rs  actions.rs  command_runner.rs  execution_context.rs  execution_paths.rs  fs.rs  journal.rs  journal_line.rs  lib.rs  main.rs  memory.rs  policy.rs  policy_config.rs  runner.rs  runner_config.rs  sandbox_fs.rs  score.rs  worktree.rs
projects/products/code_agent_sandbox/tests/: integration_pipeline.rs
projects/products/core/engine/: Cargo.toml  README.fr.md  README.md
projects/products/core/watcher/: Cargo.toml  README.fr.md  README.md
projects/products/unstable/auto_render/: Cargo.toml
projects/products/unstable/autonomous_dev_ai/: Cargo.toml  IMPLEMENTATION.md  README.md
projects/products/unstable/city_builder/: Cargo.toml  README.md  metadata.ron
projects/products/unstable/colony_manager/: Cargo.toml  README.md  metadata.ron
projects/products/unstable/diplo_sim/: Cargo.toml  README.md  metadata.ron
projects/products/unstable/docforge/: Cargo.toml  README.md  metadata.ron
projects/products/unstable/evolutionary_system_generator/: Cargo.toml  README.md
projects/products/unstable/life_sim/: Cargo.toml
projects/products/unstable/living_spreadsheet/: Cargo.toml
projects/products/unstable/platform_ide/: Cargo.toml
projects/products/unstable/princeps/: Cargo.toml  README.md  metadata.ron
projects/products/unstable/space_diplo_wars/: Cargo.toml  README.md  metadata.ron
projects/products/unstable/space_empire/: Cargo.toml
projects/products/unstable/theme_park/: Cargo.toml  README.md
projects/products/unstable/workflow_offline/: Cargo.toml
projects/products/varina/backend/: Cargo.toml  README.fr.md  README.md
(+7188 files in other folders)
