[workspace]
members = [
  "projects/libraries/ai",
  "projects/libraries/common",
  "projects/libraries/core/foundation/common_binary",
  "projects/libraries/core/foundation/common_json",
  "projects/libraries/neural",
  "projects/libraries/core/contracts/protocol",
  "projects/libraries/identity",
  "projects/libraries/security",
  "projects/libraries/core/contracts/security_core",
  "projects/libraries/symbolic",
  "projects/libraries/ui",
  "projects/libraries/core/foundation/common_parsing",
  "projects/libraries/core/foundation/common_tokenize",
  "projects/libraries/core/foundation/command_runner",
  "projects/libraries/core/foundation/common_calendar",
  "projects/libraries/core/foundation/common_time",
  "projects/libraries/core/foundation/common_ron",
  "projects/libraries/protocol_macros",
  "projects/products/stable/core/central_ui",
  "projects/products/stable/core/engine",
  "projects/products/stable/core/launcher",
  "projects/products/stable/core/watcher",
  "projects/products/stable/varina/backend",
  "projects/products/stable/varina/ui",
  "projects/products/stable/accounts/backend",
  "projects/products/stable/accounts/ui",
  "projects/products/stable/code_agent_sandbox",
  "projects/products/unstable/auto_manager_ai",
  "projects/products/unstable/autonomous_dev_ai",
  "projects/libraries/core/foundation/ast_core",
  "projects/libraries/core/foundation/ast_macros",
  "projects/libraries/core/foundation/pjson_proc_macros",
  "projects/libraries/core/foundation/hybrid_arena",
  "projects/libraries/versioning",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tracing = { version = "0.1" }
thiserror = "2.0.18"
toml = "0.9.11"
bincode = "2.0.0"
ron = "0.12"
rand = { version = "0.9.2", default-features = false }
reqwest = { version = "0.13.2", features = ["json", "default-tls"] }
ureq = "3.2.0"
futures-util = "0.3"
futures = "0.3"
url = "2"
tokio-tungstenite = { version = "0.28" }
bytes = "1.11"
tokio = { version = "1", default-features = false, features = ["full"] }
lazy_static = "1.5"
anyhow = "1.0.101"
tracing-subscriber = "0.3"

pjson_proc_macros = { path = "projects/libraries/core/foundation/pjson_proc_macros" }
common = { path = "projects/libraries/common" }
common_binary = { path = "projects/libraries/core/foundation/common_binary" }
common_json = { path = "projects/libraries/core/foundation/common_json" }
neural = { path = "projects/libraries/neural" }
protocol = { path = "projects/libraries/core/contracts/protocol" }
identity = { path = "projects/libraries/identity" }
security = { path = "projects/libraries/security" }
security_core = { path = "projects/libraries/core/contracts/security_core" }
symbolic = { path = "projects/libraries/symbolic" }
ui = { path = "projects/libraries/ui" }
command_runner = { path = "projects/libraries/core/foundation/command_runner" }
common_calendar = { path = "projects/libraries/core/foundation/common_calendar" }
common_time = { path = "projects/libraries/core/foundation/common_time" }
common_ron = { path = "projects/libraries/core/foundation/common_ron" }
common_parsing = { path = "projects/libraries/core/foundation/common_parsing" }
common_tokenize = { path = "projects/libraries/core/foundation/common_tokenize" }
protocol_macros = { path = "projects/libraries/protocol_macros" }
ast_core = { path = "projects/libraries/core/foundation/ast_core" }
ast_macros = { path = "projects/libraries/core/foundation/ast_macros" }
ai = { path = "projects/libraries/ai" }
hybrid_arena = { path = "projects/libraries/core/foundation/hybrid_arena" }
versioning = { path = "projects/libraries/versioning" }
