[workspace]
members = [
  "projects/libraries/layers/orchestration/ai",
  "projects/libraries/core/foundation/common",
  "projects/libraries/core/foundation/common_binary",
  "projects/libraries/core/foundation/common_json",
  "projects/libraries/layers/domain/neural",
  "projects/libraries/core/contracts/protocol",
  "projects/libraries/core/contracts/protocol_accounts",
  "projects/libraries/layers/domain/identity",
  "projects/libraries/layers/domain/security",
  "projects/libraries/core/contracts/security_core",
  "projects/libraries/layers/domain/symbolic",
  "projects/libraries/layers/domain/ui",
  "projects/libraries/core/foundation/common_parsing",
  "projects/libraries/core/foundation/common_tokenize",
  "projects/libraries/core/foundation/command_runner",
  "projects/libraries/core/foundation/common_calendar",
  "projects/libraries/core/foundation/common_time",
  "projects/libraries/core/foundation/common_ron",
  "projects/libraries/core/foundation/protocol_macros",
  "projects/products/stable/core/central_ui",
  "projects/products/stable/core/engine",
  "projects/products/stable/core/launcher",
  "projects/products/stable/core/watcher",
  "projects/products/stable/varina/backend",
  "projects/products/stable/varina/ui",
  "projects/products/stable/accounts/backend",
  "projects/products/stable/accounts/ui",
  "projects/products/stable/code_agent_sandbox",
  "projects/products/unstable/auto_manager_ai",
  "projects/products/unstable/autonomy_orchestrator_ai",
  "projects/products/unstable/autonomous_dev_ai",
  "projects/products/unstable/autonomy_reviewer_ai",
  "projects/products/unstable/auto_render",
  "projects/products/unstable/life_sim",
  "projects/products/unstable/space_empire",
  "projects/products/unstable/city_builder",
  "projects/products/unstable/space_diplo_wars",
  "projects/libraries/core/foundation/ast_core",
  "projects/libraries/core/foundation/ast_macros",
  "projects/libraries/core/foundation/pjson_proc_macros",
  "projects/libraries/core/foundation/hybrid_arena",
  "projects/libraries/layers/domain/versioning",
  "projects/libraries/layers/domain/runtime_core",
  "projects/products/unstable/living_spreadsheet",
  "projects/products/stable/platform_versioning/backend",
  "projects/products/stable/platform_versioning/ui",
  "projects/products/stable/platform_ide/backend",
  "projects/products/stable/platform_ide/ui",
  "projects/products/unstable/digital_pet/backend",
  "projects/products/unstable/digital_pet/ui",
  "projects/products/unstable/simkernel/backend",
  "projects/products/unstable/simkernel/ui",
  "projects/products/unstable/simkernel/tooling",
  "projects/products/unstable/diplo_sim",
  "projects/products/unstable/princeps",
  "projects/products/unstable/dev_agent",
  "projects/products/unstable/factory_sim",
  "projects/products/unstable/workflow_offline",
  "projects/products/unstable/simulation_compiler/backend",
  "projects/products/unstable/simulation_compiler/ui",
  "projects/products/unstable/simulation_compiler/tooling",
  "projects/products/unstable/meta_determinism_guard/backend",
  "projects/products/unstable/meta_determinism_guard/ui",
  "projects/products/unstable/meta_determinism_guard/tooling",
  "projects/products/unstable/code_forge_engine/backend",
  "projects/products/unstable/code_forge_engine/ui",
  "projects/products/unstable/code_forge_engine/tooling",
  "projects/products/unstable/protocol_builder/backend",
  "projects/products/unstable/protocol_builder/ui",
  "projects/products/unstable/protocol_builder/tooling",
  "projects/products/unstable/evolutionary_system_generator/backend",
  "projects/products/unstable/evolutionary_system_generator/ui",
  "projects/products/unstable/evolutionary_system_generator/tooling",
  "projects/products/unstable/artifact_factory/backend",
  "projects/products/unstable/artifact_factory/ui",
  "projects/products/unstable/artifact_factory/tooling",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tracing = { version = "0.1" }
thiserror = "2.0.18"
toml = "0.9.11"
bincode = "2.0.0"
ron = "0.12"
rand = { version = "0.9.2", default-features = false }
reqwest = { version = "0.13.2", features = ["json", "default-tls"] }
ureq = "3.2.0"
futures-util = "0.3"
futures = "0.3"
url = "2"
tokio-tungstenite = { version = "0.28" }
bytes = "1.11"
tokio = { version = "1", default-features = false, features = ["full"] }
lazy_static = "1.5"
anyhow = "1.0.101"
tracing-subscriber = "0.3"

pjson_proc_macros = { path = "projects/libraries/core/foundation/pjson_proc_macros" }
common = { path = "projects/libraries/core/foundation/common" }
common_binary = { path = "projects/libraries/core/foundation/common_binary" }
common_json = { path = "projects/libraries/core/foundation/common_json" }
neural = { path = "projects/libraries/layers/domain/neural" }
protocol = { path = "projects/libraries/core/contracts/protocol" }
protocol_accounts = { path = "projects/libraries/core/contracts/protocol_accounts" }
identity = { path = "projects/libraries/layers/domain/identity" }
security = { path = "projects/libraries/layers/domain/security" }
security_core = { path = "projects/libraries/core/contracts/security_core" }
symbolic = { path = "projects/libraries/layers/domain/symbolic" }
ui = { path = "projects/libraries/layers/domain/ui" }
command_runner = { path = "projects/libraries/core/foundation/command_runner" }
common_calendar = { path = "projects/libraries/core/foundation/common_calendar" }
common_time = { path = "projects/libraries/core/foundation/common_time" }
common_ron = { path = "projects/libraries/core/foundation/common_ron" }
common_parsing = { path = "projects/libraries/core/foundation/common_parsing" }
common_tokenize = { path = "projects/libraries/core/foundation/common_tokenize" }
protocol_macros = { path = "projects/libraries/core/foundation/protocol_macros" }
ast_core = { path = "projects/libraries/core/foundation/ast_core" }
ast_macros = { path = "projects/libraries/core/foundation/ast_macros" }
ai = { path = "projects/libraries/layers/orchestration/ai" }
hybrid_arena = { path = "projects/libraries/core/foundation/hybrid_arena" }
versioning = { path = "projects/libraries/layers/domain/versioning" }
runtime_core = { path = "projects/libraries/layers/domain/runtime_core" }

sha2 = "0.10.8"
hex = "0.4.3"
axum = { version = "0.8.1", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
http = "1"
