[package]
name = "ast_core"
version = "0.1.0"
edition = "2024"

[dependencies]
hybrid_arena.workspace = true
proc-macro2 = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ast_bench"
harness = false

[[bench]]
name = "ast_validation_bench"
harness = false

[[bench]]
name = "micro_bench"
harness = false
