[package]
name = "hybrid_arena"
version = "0.1.0"
edition = "2024"
description = "High-performance arena allocators with type-safe, generation-checked IDs"
keywords = ["arena", "allocator", "memory", "ecs", "data-structures"]
categories = ["data-structures", "memory-management", "game-development"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
stable = []

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "arena_bench"
harness = false
