[package]
name = "identity"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
common = { workspace = true }
security_core = { workspace = true }
protocol = { workspace = true }
tokio = { version = "1", features = ["full"] }
rand = { workspace = true }
