[package]
name = "neural"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { version = "0.15", features = ["serde"] }
serde = { workspace = true }
thiserror = "1.0"
rand = "0.8"
rand_distr = "0.4"
tracing = "0.1"
serde_json = { workspace = true }
common = { workspace = true }
common_time = { workspace = true }