[package]
name = "neural"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { version = "0.17", features = ["serde"] }
thiserror = { workspace = true }
rand = { workspace = true }
rand_distr = "0.5"
tracing = "0.1"
common = { workspace = true }
common_time = { workspace = true }
protocol = { workspace = true }
common_json = { workspace = true }
serde = { workspace = true }
