[package]
name = "symbolic"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
regex = "1.12"
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
common = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "symbolic_bench"
harness = false
