[package]
name = "code_agent_sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
wait-timeout = "0.2"
diffy = "0.3"
chrono = "0.4"
ai = { workspace = true }
toml = "0.5"
log = "0.4"
tracing.workspace = true
