[package]
name = "code_agent_sandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
walkdir = "2"
wait-timeout = "0.2"
diffy = "0.3"
chrono = "0.4"
toml = "0.5"
log = "0.4"
globset = "0.4.18"
rand = "0.9.2"
tempfile = "3.24.0"
futures = "0.3"

tracing = { workspace = true }
ai = { workspace = true }
protocol = { workspace = true }
command_runner = { workspace = true }
common = { workspace = true }
common_time = { workspace = true }
common_json = { workspace = true }