[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = { version = "0.4.2", features = ["websocket", "server", "test"] }
tracing = "0.1"
tracing-subscriber = "0.3"
protocol = { workspace = true }
security = { workspace = true }
common = { workspace = true }
common_json = { workspace = true }
serde = { workspace = true }
futures = "0.3"
hyper = "0.14"
tokio-tungstenite = "0.15"
futures-util = "0.3"
