[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
warp = { version = "0.4.2", features = ["websocket", "server", "test"] }
tracing = { workspace = true }
tracing-subscriber = "0.3"
protocol = { workspace = true }
security = { workspace = true }
identity = { workspace = true }
accounts_backend = { path = "../../accounts/backend", package = "accounts-backend" }
common = { workspace = true }
common_json = { workspace = true }
serde = { workspace = true }
futures = "0.3"
hyper = "1.8"
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
thiserror = { workspace = true }
chrono = "0.4"
rand = { workspace = true }
