[package]
name = "watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
log = { version = "0.4", features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tokio-util = "0.7"
