[package]
name = "watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
log = { version = "0.4", features = ["std"] }
reqwest = { version = "0.13", default-features = false, features = [
  "json",
] }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tokio-util = "0.7"
