[package]
name = "auto_render"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "auto_render"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
ron = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = "1.0"
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
