[package]
name = "auto_render"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
common_json = { workspace = true }
common_ron = { workspace = true }

[dev-dependencies]
