[package]
name = "city_builder"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "city_builder"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
