[package]
name = "colony_manager"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "colony_manager"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
