[package]
name = "life_sim"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "life_sim"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }
serde_json = "1"
