[package]
name = "living_spreadsheet"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "living_spreadsheet"
path = "src/main.rs"

[dependencies]
runtime_core = { path = "../../../../projects/libraries/layers/domain/runtime_core" }
serde = { workspace = true }
thiserror = { workspace = true }
serde_json = "1"
