[package]
name = "princeps"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "princeps"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true, features = ["std_rng", "std"] }
