[package]
name = "space_diplo_wars"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "space_diplo_wars"
path = "src/main.rs"

[lib]
name = "space_diplo_wars"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
ron = { workspace = true }
