[package]
name = "space_empire"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "space_empire"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = "1"
