[workspace]
members = ["backend", "ui"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
hex = "0.4"
rand = { version = "0.9", default-features = false }
serde_json = "1.0"
anyhow = "1.0"
