[package]
name = "workflow_offline"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "workflow_offline"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
serde_json = "1"
runtime_core = { path = "../../../libraries/layers/domain/runtime_core" }

[dev-dependencies]
serde_json = "1"
