[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }
ai = { workspace = true }
git_lib = { workspace = true }
protocol = { workspace = true }
serde = { workspace = true }
command_runner = { workspace = true }
common_json = { workspace = true }
ignore = "0.4"
lazy_static = "1.4"
