[package]
name = "ai"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
blake3 = "1.8.3"
symbolic = { workspace = true }
neural = { workspace = true }
tracing = { workspace = true }
protocol = { workspace = true }
common_json = { workspace = true }
