[package]
name = "accounts-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
protocol = { workspace = true }
common = { workspace = true }
common_json = { workspace = true }
common_time = { workspace = true }
security = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
lazy_static = { workspace = true }
